--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@google-cloud/datastore": "^2.0.0",
     "bcrypt": "^3.0.0",
     "dotenv": "^6.0.0",
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.6.0",
     "jsonwebtoken": "^8.1.0",
     "route-parser": "0.0.5",
     "slugify": "^1.2.6",
